# ChangeLog for www-misc/mozilla-sync-server-storage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mozilla-sync-server-storage-1.15.3 (08 Sep 2013)

  08 Sep 2013; Francisco Blas Izquierdo Riera (klondike)
  +mozilla-sync-server-storage-1.15.3.ebuild, +metadata.xml:
  Initial version, using propper dependencies
