@@ -1,3 +1,3 @@
-EBUILD mozilla-sync-server-storage-1.15.3.ebuild 1510 SHA256 d362574f1b8b0a56872350c29769f8759a97d6a4770875b42ba8bef2fb7af5d2 SHA512 2470dc0f87cc70bf419193f861174fa850186756702a60ee39d40ed0c893b2c74a430014a301d014da83480b521a9406ddc49b339ccd4f90066576b1ce9247b4 WHIRLPOOL 763d73818cda83a8e4ca7adb51dac5afb947aaa1d5382af1b6e9790bb34e7c5ae90e9f5b61b21f962f08f32118d836a9ac82eda88fff790d72d4ea66dab31fdc
-MISC ChangeLog 353 SHA256 9bc1057db7a69ca7116fce51dbcb4675ed98dfee2ebfb4ac26f5864cb14aa792 SHA512 28ad6992de96160cd68eee5a53cc653a3ad560a4b145b49fbfa1c33e916cdd0598aa48040574dca24f3f467ed90a1cf1a6a4f124f66fcaed2519159705fdaf4d WHIRLPOOL 9b19eb3b6c5a96b5dacc75ff4bc0eb60127f1f2c863d97c80d25fd5ff6d179c04035128eb4e33fbbd389c76450f07e8be9759e2975ce264126921e8b65171421
+EBUILD mozilla-sync-server-storage-1.17.1.ebuild 1563 SHA256 cfd7735b040b455ad6d01257df0e828278fc9bfd9441120e39812c17e8aca889 SHA512 ebe1c38042afffdf69137a5659d6461fa6acb18dcfbfd7882864d0ee89392d693dd3bdc63555e5f51b5b3e9f2f2613a14eb74c8a4766bd060c6223d97ac07344 WHIRLPOOL 491b53ca9779376e1d7736c7326287776cf5723a87e044e2cdf976457a107776c56a7dc50ef6672603e216788c8262da1fde9c17bf721e2de05706ac5cb95922
+MISC ChangeLog 606 SHA256 b36b24d08c3203b30fd19bf981273410a2afccb486dd63239463ea2fac96d7db SHA512 501b6f0d96903ad56b0f9213598c5e92eb57c52418cb034731b86b85c7cee64f46c0d6b064d06d3afc27020d1e352691c121820202a9060e386b564fc6761165 WHIRLPOOL 78580f6fb64c694677263e03468653edb0fa9f48b6f53a1ce4d01bf2fa420b15f85ecc096c1bbcad906b9dc29c0544cdb02f5b2e61a9f59b30e0fc2b7584cd7c
 MISC metadata.xml 311 SHA256 47591f3d9cbbbe6ab4e4a94ea797e3e561315ed96296e183715942ad475a27d0 SHA512 bbc72fc331b29193f457f2905c2d87afefc2f86fe6888789fd5022102c89eacd3290ad5056f2f5948810c64e28138da53e14681d50fd7127c408b330d60f2db7 WHIRLPOOL 58e92ad02457fe098eeea657620e3bf6ac91daecd0e54783da68d81308ec4a6ba066155b8506b218da7417bfa045367d5d4ed979c218e5f039a08b292160a4df
