@@ -2,6 +2,13 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mozilla-sync-server-storage-1.17.1 (09 Sep 2013)
+
+  09 Sep 2013; Francisco Blas Izquierdo Riera (klondike)
+  -mozilla-sync-server-storage-1.15.3.ebuild,
+  +mozilla-sync-server-storage-1.17.1.ebuild:
+  Update to current version since I used an old one
+
 *mozilla-sync-server-storage-1.15.3 (08 Sep 2013)
 
   08 Sep 2013; Francisco Blas Izquierdo Riera (klondike)
